--- a/package.json
+++ b/package.json
@@ -5,20 +5,22 @@
     "main": "build/index.js",
     "type": "module",
     "scripts": {
-      "build": "tsc",
-      "develop" : "tsc -watch"
+        "build": "tsc",
+        "develop": "tsc -watch"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
-      "@types/node": "^20.2.3",
-      "typescript": "^5.0.4"
+        "@types/node": "^20.2.3",
+        "typescript": "^5.0.4"
     },
     "dependencies": {
-      "@types/express": "^4.17.17",
-      "@types/promise": "^7.1.30",
-      "express": "^4.18.2",
-      "promise": "^8.3.0"
+        "@types/promise": "^7.1.30",
+        "@types/randomstring": "^1.1.11",
+        "@types/ws": "^8.5.10",
+        "promise": "^8.3.0",
+        "randomstring": "^1.3.0",
+        "ws": "^8.14.2"
     }
-  }
+}
