--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
         "typescript": "^5.0.4"
     },
     "dependencies": {
+        "@types/death": "^1.1.5",
         "@types/promise": "^7.1.30",
         "@types/randomstring": "^1.1.11",
         "@types/ws": "^8.5.10",
+        "date-time": "^4.0.0",
+        "death": "^1.1.0",
         "promise": "^8.3.0",
         "randomstring": "^1.3.0",
         "ws": "^8.14.2"
