took out toaster chat

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "files.exclude": {
         "**/node_modules": true,
-        "**/.gitignore" : false,
+        "**/.gitignore" : true,
         "**/package-lock.json" : true,
         "**/*.js.map": true,
         "README.md" : true,
