--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ build
 token.txt
 tables
 
+temp.txt
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
