--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     },
     "dependencies": {
         "@types/death": "^1.1.5",
+        "@types/express": "^4.17.21",
         "@types/promise": "^7.1.30",
         "@types/randomstring": "^1.1.11",
         "@types/ws": "^8.5.10",
         "date-time": "^4.0.0",
         "death": "^1.1.0",
+        "express": "^4.18.2",
         "promise": "^8.3.0",
         "randomstring": "^1.3.0",
         "ws": "^8.14.2"
